manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubedoom
  namespace: kubedoom
  labels:
    app: kubedoom
spec:
  type: NodePort
  selector:
    app: kubedoom
  ports:
    - port: 5900
      targetPort: 5900
      nodePort: 30090
      name: vnc
